<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="utb.desarrollomovil.ubicacionutb.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textViewActivityMainTitulo"
        android:layout_marginTop="38dp"
        android:textStyle="bold"
        android:textSize="@dimen/titulo_activity_main"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tagline"
        android:id="@+id/textViewAcitivityMainTagline"
        android:layout_below="@+id/textViewActivityMainTitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textSize="@dimen/titulo_activity_main_tagline" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewActivityMainLogoUniversidad"
        android:contentDescription="@string/nombre_universidad"
        android:src="@drawable/logo_utb_medalla"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewAcitivityMainTagline" />
</RelativeLayout>
